--- a/Linear_regression.ipynb
+++ b/Linear_regression.ipynb
@@ -5,10 +5,7 @@
     "colab": {
       "name": "Linear_regression.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "mount_file_id": "1JohTT5R73j071Hnd93q3Urxi1wGehIG-",
-      "authorship_tag": "ABX9TyNIKhTRy4U8Zf7Uvg8cz/SY",
-      "include_colab_link": true
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -19,16 +16,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Dtenisha/Machine-Learning-Algorithms/blob/main/Linear_regression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "metadata": {
